--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,16 @@
+<h1> Create a Post </h1>
+
+
+<%= form_for post do |f| %>
+    <%= f.label "title:" %>
+    <%= f.text_field :title %>
+    <%= f.label "content:" %>
+    <%= f.text_field :content %>
+    <%= f.label "Category:" %>
+<%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+    <%= categories_fields.text_field :name %><br>
+    <% end %>
+    <%= f.submit %>
+    <% end %>
 
