--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,44 @@
+
 <h1><%= @post.title %></h1>
-
-<h2><%= @post.content %></h2>
-<ul>
-<% @post.categories.each do |category| %>
- <li><%= link_to category.name, category_path(category) %></li>
- <% end %>
- </ul>
-
+<p>
+  <%= @post.content %>
+</p>
+<p>
+Categories: <%= @post.categories.map(&:name).join(' ') %>
+</p>
 <ul>
 <% @post.comments.each do |comment| %>
-    <li><%= link_to comment.content, comment_path(comment) %></li>
-    <% end %>
-    </ul>
+  <li>
+    <%= comment.user.username %> says: <%= comment.content %>
+  </li>
+<% end %>
+</ul>
 
-    <ul>
-    <% @post.users.uniq.each do |user| %>
-        <li><%= link_to user.username, user_path(user) %></li>
-        <% end %>
-        </ul>
+Commentors:
+<ul>
+<% @post.users.distinct.each do |user| %>
+  <li>
+    <%= link_to user.username, user_path(user) %>
+  </li>
+<% end %>
+</ul>
 
+<%= form_for @post.comments.build do |f| %>
+  <%= f.hidden_field :post_id %>
+  <p>
+    <%= f.collection_select :user_id, User.all, :id, :username %>
+  </p>
+
+  <%= f.fields_for :user, User.new do |user_fields| %>
+    <%= user_fields.label :username %>
+    <%= user_fields.text_field :username %>
+  <% end %>
+  
+  <p>
+    <%= f.label :content, "New Comment" %><br>
+    <%= f.text_area :content %>
+  </p>
+  <br/>
+  <%= f.submit %>
+<% end %>
         
