--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,8 @@
 
-<h1><%= @user.username %></h1>
+<h1><%= @user.username %>Comments:</h1>
 
-<ul>
 <% @user.posts.each do |post| %>
-    <li><%= link_to post.title, post_path(post) %></li>
-    <% end %>
-    </ul>
-
+    <%= link_to post.title, post_path(post) %>
+<% end %>
+   
 
